Fix controllers de publicaciones (ahora por tkn)